# physics-engine

./: CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/learnopengl/include/VAO/: VAO.h
dependencies/learnopengl/include/VBO/: VBO.h
dependencies/learnopengl/include/camera/: camera.h
dependencies/learnopengl/include/shader/: shader.h
dependencies/learnopengl/include/texture/: texture.h
dependencies/learnopengl/src/: VAO.cpp  VBO.cpp  camera.cpp  shader.cpp  texture.cpp
physics-engine/: CMakeLists.txt  physics-engine.cpp  physics-engine.h
src/: CMakeLists.txt  n_body_simulation.cpp  physics-engine.cpp
src/shaders/fragment/: fragment.glsl
src/shaders/simulation/: simulation.frag  simulation.vert
src/shaders/vertex/: vertex.glsl
